tests/ui/suggestions/issue-97677.rs
//@ run-rustfix

fn add_ten<N>(n: N) -> N {
    n + 10
    //~^ ERROR cannot add `{integer}` to `N`
}

fn main() { add_ten(0); }
